--- a/index.css
+++ b/index.css
@@ -2157,7 +2157,7 @@
 }
 
 .pastel-long-sleeve-container {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: center;
   max-width: 100%;
