--- a/index.css
+++ b/index.css
@@ -2157,18 +2157,18 @@
 }
 
 .pastel-long-sleeve-container {
-  /* display: flex; */
-  /* align-items: center;
-  justify-content: center; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
   max-width: 100%;
-  /* flex-direction: column;
-  gap: 0.806rem; */
+  flex-direction: column;
+  gap: 0.806rem;
 }
 .frame-wrapper11,
 .image-parent {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
   max-width: 100%;
 }
 
