--- a/index.css
+++ b/index.css
@@ -2309,7 +2309,6 @@
   gap: 0.875rem;
 }
 .frame-wrapper13,
-.frame-wrapper14,
 .image-group,
 .pastel-long-sleeve-parent1 {
   display: flex;
@@ -2317,6 +2316,14 @@
   justify-content: flex-start;
   max-width: 100%;
 }
+
+.frame-wrapper14 {
+display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
+}
+
 .frame-wrapper14 {
   width: 23rem;
   flex-direction: row;
