--- a/index.css
+++ b/index.css
@@ -2309,16 +2309,15 @@
   gap: 0.875rem;
 }
 .frame-wrapper13,
-.image-group,
-.pastel-long-sleeve-parent1 {
+.image-group {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
   max-width: 100%;
 }
 
-.frame-wrapper14 {
-display: flex;
+.frame-wrapper14, .pastel-long-sleeve-parent1 {
+  display: flex;
   align-items: center;
   justify-content: center;
   max-width: 100%;
