--- a/index.css
+++ b/index.css
@@ -2312,7 +2312,7 @@
 .image-group {
   display: flex;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
   max-width: 100%;
 }
 
