--- a/index.css
+++ b/index.css
@@ -2339,7 +2339,7 @@
   gap: 1.519rem;
 }
 .frame-wrapper13 {
-  padding: 0.344rem 0.519rem 0 0;
+  /* padding: 0.344rem 0.519rem 0 0; */
   box-sizing: border-box;
 }
 .empower-plate,
