--- a/SignUP-main/index.css
+++ b/SignUP-main/index.css
@@ -337,13 +337,13 @@
   display: inline-block;
   min-width: 88px;
 }
-.facebook-btn,
+/* .facebook-btn,
 .google-btn-parent {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-}
+} */
 .facebook-btn {
   cursor: pointer;
   border: 1px solid var(--color-black);
