--- a/SignUP-main/index.css
+++ b/SignUP-main/index.css
@@ -315,8 +315,8 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
   gap: var(--gap-3xs);
   min-width: 128px;
 }
