--- a/Paypal_Payment/style.css
+++ b/Paypal_Payment/style.css
@@ -1,3 +1,9 @@
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #paypal-button-container {
     display: flex;
     align-items: center;
