--- a/add_to_cart_v3-main/style.css
+++ b/add_to_cart_v3-main/style.css
@@ -195,6 +195,8 @@ body.showCart .container {
   cursor: pointer;
   text-decoration: none;
   color: #000;
+  padding-top: 1.5rem;
+  text-align: center;
 }
 
 .cartTab .close {
